# hardware-effects-gpu

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  common.h  utils.py
bank-conflicts/: CMakeLists.txt  README.md  bank-conflicts.cu  benchmark.py  init.cpp
memory-coalescing/: CMakeLists.txt  README.md  benchmark.py  init.cpp  memory-coalescing.cu
shared-memory-limit/: CMakeLists.txt  README.md  benchmark.py  init.cpp  shared-memory-limit.cu
